@@ -1,5 +1,7 @@
 Changes in Version 0.2.3 (2021-xx-xx)
 =====================================
+time
+ - Fix warning for out-of-date leapseconds.
 toolbox
  - Fix bootHisto passing of kwargs to histogram and bar.
 
